add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,18 @@ build-iPhoneSimulator/
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
+
+# capistrano-gfarm
+log
+*.tar.gz
+
+# backup files
+*~
+*/*~
+*/*/*~
+.#*
+*/.#*
+*/*/.#*
+*.bak
+*/*.bak
+*/*/*.bak
